--- a/backend/docker-compose.cicd.yml
+++ b/backend/docker-compose.cicd.yml
@@ -25,6 +25,16 @@ services:
       - "app=genassist"
       - "service=db"
 
+  # Init container to set up volume permissions
+  volume-init:
+    image: busybox
+    container_name: genassist-volume-init-cicd
+    command: sh -c "mkdir -p /data/logs && chown -R 1000:1000 /data"
+    volumes:
+      - app_data_volume_cicd:/data
+    networks:
+      - genassist-network-cicd
+
   # Main application service
   app:
     build:
@@ -44,6 +54,8 @@ services:
       - DB_HOST=genassist_db_cicd
       - REDIS_HOST=redis
     depends_on:
+      volume-init:
+        condition: service_completed_successfully
       chroma:
         condition: service_started
       qdrant:
