--- a/.build/docker-compose.build.yml
+++ b/.build/docker-compose.build.yml
@@ -1,5 +1,17 @@
 services:
   # =========================
+  # Init container to set up volume permissions
+  # =========================
+  volume-init:
+    image: busybox:latest
+    container_name: genassist-volume-init
+    volumes:
+      - app_data:/data
+    command: sh -c "mkdir -p /data/logs /data/uploads /data/recordings && chown -R 1000:1000 /data"
+    networks:
+      - genassist-network
+
+  # =========================
   # Database (3rd party)
   # =========================
   db:
@@ -49,6 +61,8 @@ services:
     volumes:
       - app_data:/src/datavolume
     depends_on:
+      volume-init:
+        condition: service_completed_successfully
       chroma:
         condition: service_started
       redis:
