--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,14 @@
 services:
+  # Init container to set up volume permissions
+  volume-init:
+    image: busybox:latest
+    container_name: genassist-volume-init-dev
+    volumes:
+      - app_data_volume:/data
+    command: sh -c "mkdir -p /data/logs /data/uploads /data/recordings && chown -R 1000:1000 /data"
+    networks:
+      - genassist-network-dev
+
   # Database
   db:
     image: pgvector/pgvector:pg17
@@ -48,6 +58,8 @@ services:
       retries: 3
       start_period: 40s
     depends_on:
+      volume-init:
+        condition: service_completed_successfully
       chroma:
         condition: service_started
       qdrant:
