enhance: enable redis override url

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,7 +51,7 @@ AWS_RECORDINGS_BUCKET=AWSRECORDINGBUCKET
 REDIS_HOST=redis
 REDIS_PORT=6379
 #REDIS_PASSWORD=  # Optional; set for Redis AUTH (e.g. managed/cloud Redis)
-
+#REDIS_OVERRIDE_URL= redis://localhost:6379  # Optional; set for Redis Cluster mode
 PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 USE_OPIK=TRUE
